<resources>
    <string name="app_name">HireFoxes</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="home">Home</string>
    <string name="title_notifications">Notifications</string>

    <!--    signup       -->
    <string name="sign_up_title">Lets Start!</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">User-Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone-Number</string>

    <!--    login        -->
    <string name="welcome_back">Welcome Back</string>
    <string name="login_sub_title">We missed you! Login to get started</string>
    <string name="signin">Sign In</string>
    <string name="demo_email">Email@gmail.com</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register_instead">Register Instead</string>

    <!--    provider_profile    -->
    <string name="developer_name">Developer Name</string>
    <string name="developer_work">Developer Work</string>
    <string name="provider_rating">3.5</string>
    <string name="provider_price">Price</string>
    <string name="location">Location</string>
    <string name="hire_me">Hire Me</string>

    <!--    home fragment    -->
    <string name="all_services">All Services</string>
    <string name="popular_services">Popular Services</string>
    <string name="new_services">New Services</string>
    <string name="viewAll">View All</string>
    <string name="search">Search</string>
    <string name="home_title">What services are you</string>
    <string name="home_sub_title">looking for?</string>

    <!--  account fragment  -->
    <string name="viewProfile">View Profile</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="payments">Payments</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="about">About</string>
    <string name="signOut">Sign Out</string>

    <!--  SearchView  -->
    <string name="cancel">Cancel</string>
    <string name="what">What</string>
    <string name="where">Where</string>
    <string name="hire_services">Hire Services</string>
    <string name="city_state_pinCode">City, State, Pin-Code</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="find_services">Find Services</string>

    <!--  Setting  -->
    <string name="add_a_place">Add a Place</string>
    <string name="add_a_place_sub_title">In case we are missing something</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_profile_sub_title">Change your name, description and profile photo</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="notification_settings_sub_title">Define what alerts and notification you want to see</string>
    <string name="account_settings">Account Settings</string>
    <string name="account_settings_sub_title">Change your email or delete your account.</string>
    <string name="manage_payment_methods">Manage Payment Methods</string>

    <!--  Add Your Place   -->
    <string name="add_your_address">Add Your Address</string>

    <!--  Edit Profile  -->
    <string name="cover_picture">Cover Picture</string>
    <string name="profile_picture">Profile Photo</string>
    <string name="add_photo">Add Photo</string>
    <string name="company">Company</string>
    <string name="alone">Alone</string>
    <string name="your_working_status">Select Your Working Status</string>
    <string name="change">Change</string>
    <string name="auto_pick">Auto Pick</string>
    <string name="description">Description</string>
    <string name="your_description">Tell us a little something about yourself(in less than 150 characters)</string>
    <string name="save_information">Save Information</string>


    <string name="all">All</string>
    <string name="new_product">New</string>
    <string name="popular">Popular</string>
    <string name="profile">Profile</string>
    <string name="version">V0.1.1</string>


    <string-array name="state">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>

    <string-array name="services">
        <item>Appliance Repair</item>
        <item>Carpenters</item>
        <item>Computer Repair</item>
        <item>Delivery</item>
        <item>Electricians</item>
        <item>Event Management</item>
        <item>Full House Removels</item>
        <item>Furniture Assembly</item>
        <item>Home Cleaning</item>
        <item>IT Services</item>
        <item>Massage</item>
        <item>Painters</item>
        <item>Pest Controls</item>
        <item>Photographers</item>
        <item>Plumbers</item>
        <item>Salon</item>
    </string-array>


    <!--  Menu Navigation  -->
    <string name="chat">Chat</string>
    <string name="account">Account</string>


</resources>