<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    app:cnb_unselectedColor="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="#fff"
        app:cnb_textColor="#fff"/>

    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/chat"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="#fff"
        app:cnb_textColor="#fff"/>

    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/account"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="#fff"
        app:cnb_textColor="#fff"/>

</menu>