<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".bottom_navigation.profile_fragments.account">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="30dp"
            android:layout_marginStart="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/account_profile_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/profile_pic"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/account_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/username"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/account_viewProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewProfile"
                android:textColor="@android:color/holo_red_light"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_right_24" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="#c0c0c0"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="#fff"
        android:weightSum="4"
        tools:ignore="DisableBaselineAlignment">
        <LinearLayout
            android:id="@+id/account_bookmark_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_bookmark_border_24"
                tools:ignore="ContentDescription,NestedWeights,TooManyViews" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:text="@string/bookmarks"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/account_notification_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_notifications_none_24"
                tools:ignore="ContentDescription,NestedWeights" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:text="@string/notifications"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/account_settings_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_settings_24"
                tools:ignore="ContentDescription,NestedWeights" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:text="@string/settings"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/account_payments_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="2"
            android:gravity="center"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_payment_24"
                tools:ignore="ContentDescription,NestedWeights" />
            <TextView
                android:id="@+id/home_search_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:text="@string/payments"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="#c0c0c0"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendFeedback"
            android:textSize="18sp"
            android:textColor="@color/gray"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/account_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/gray"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/account_signOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signOut"
            android:textColor="@color/gray"
            android:textSize="18sp"/>
    </LinearLayout>


</LinearLayout>