<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/colorPrimary">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_centerVertical="true"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:text="@string/welcome_back"
                android:layout_marginTop="12dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/login_sub_title"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@drawable/login_bottom_background"
        android:elevation="36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="36dp"
            android:text="@string/signin"
            android:textColor="@android:color/black"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/ic_baseline_email_24"
                android:drawableTint="@android:color/black"
                android:hint="@string/demo_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/black" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/ic_baseline_lock_24"
                android:drawableTint="@android:color/black"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/black" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:text="@string/signin"
                    android:background="@drawable/button_background"
                    android:textAllCaps="false"
                    android:drawableEnd="@drawable/ic_baseline_send_24"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="26dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="Don't have an account?"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/register_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/register_instead"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>